--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -10,15 +10,26 @@
       </ul>
     </div>
   <% end %> -->
-<div id="actions">
-  <%= form_with(model: room) do |form| %>
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div id="actions">
+    <%= form_with(model: room) do |form| %>
+      <div>
+        <%= form.label :name, style: "display: block" %>
+        <%= form.text_field :name %>
+      </div>
+  
+      <div>
+        <%= form.label :user_ids, "Select Users" %><br>
+        <%= form.collection_check_boxes :user_ids, User.all, :id, :email do |b| %>
+  <div class='chooseuser'>
+    <%= b.check_box %> <%= b.label %>
   </div>
+<% end %>
 
-  <div>
-    <%= form.submit %>
+      </div>
+  
+      <div>
+        <%= form.submit %>
+      </div>
+    <% end %>
   </div>
-  <% end %>
-</div>
+  
